--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="container header__container flex">
       <a href="#" class="header__logo">
         <picture>
-          <source media="(min-width: 330px)" srcset="img/header-logo.png">
-          <source media="(min-width: 120px)" srcset="img/header-logo-320.png">
-          <img src="img/logo.png" alt="">
+          <source media="(min-width: 330px)" srcset="./img/header-logo.png">
+          <source media="(min-width: 120px)" srcset="./img/header-logo-320.png">
+          <img src="./img/logo.png" alt="">
         </picture>
       </a>
       <nav class="nav col-10">
@@ -79,10 +79,10 @@
           <div class="row g-0 advantages__top">
             <div class=" col-xl-2 col-lg-4 col-md-4 col-sm-4">
               <picture class="article__image">
-                <source media="(min-width: 1110px)" srcset="img/advantages.png">
-                <source media="(min-width: 690px)" srcset="img/advantages-690.png">
-                <source media="(min-width: 510px)" srcset="img/advantages-510.png">
-                <img src="img/advantages.png" alt="">
+                <source media="(min-width: 1110px)" srcset="./img/advantages.png">
+                <source media="(min-width: 690px)" srcset="./img/advantages-690.png">
+                <source media="(min-width: 510px)" srcset="./img/advantages-510.png">
+                <img src="./img/advantages.png" alt="">
               </picture>
             </div>
             <div class="article__text card-body col-xl-6 col-lg-8 col-md-8 col-sm-8">
@@ -213,11 +213,11 @@
         <ul class="teachers__list row list-reset">
           <li class="list__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
             <picture class="teachers__avatar">
-              <source media="(min-width: 1110px)" srcset="img/teacher-1.png">
-              <source media="(min-width: 690px)" srcset="img/teacher-1-690.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-1-510.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-1-320.png">
-              <img src="img/teacher-1.png" alt="" class="avatar-image">
+              <source media="(min-width: 1110px)" srcset="./img/teacher-1.png">
+              <source media="(min-width: 690px)" srcset="./img/teacher-1-690.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-1-510.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-1-320.png">
+              <img src="./img/teacher-1.png" alt="" class="avatar-image">
             </picture>
             <div class="teachers__descr">
               <h4 class="teachers-name">
@@ -232,11 +232,11 @@
           </li>
           <li class="list__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
             <picture class="teachers__avatar">
-              <source media="(min-width: 1110px)" srcset="img/teacher-2.png">
-              <source media="(min-width: 690px)" srcset="img/teacher-2-690.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-2-510.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-2-320.png">
-              <img src="img/teacher-2.png" alt="" class="avatar-image">
+              <source media="(min-width: 1110px)" srcset="./img/teacher-2.png">
+              <source media="(min-width: 690px)" srcset="./img/teacher-2-690.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-2-510.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-2-320.png">
+              <img src="./img/teacher-2.png" alt="" class="avatar-image">
             </picture>
             <div class="teachers__descr">
               <h4 class="teachers-name">
@@ -249,11 +249,11 @@
           </li>
           <li class="list__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
             <picture class="teachers__avatar">
-              <source media="(min-width: 1110px)" srcset="img/teacher-3.png">
-              <source media="(min-width: 690px)" srcset="img/teacher-3-690.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-3-510.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-3-320.png">
-              <img src="img/teacher-3.png" alt="" class="avatar-image">
+              <source media="(min-width: 1110px)" srcset="./img/teacher-3.png">
+              <source media="(min-width: 690px)" srcset="./img/teacher-3-690.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-3-510.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-3-320.png">
+              <img src="./img/teacher-3.png" alt="" class="avatar-image">
             </picture>
             <div class="teachers__descr">
               <h4 class="teachers-name">
@@ -266,11 +266,11 @@
           </li>
           <li class="list__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
             <picture class="teachers__avatar">
-              <source media="(min-width: 1110px)" srcset="img/teacher-4.png">
-              <source media="(min-width: 690px)" srcset="img/teacher-4-690.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-4-510.png">
-              <source media="(min-width: 510px)" srcset="img/teacher-4-320.png">
-              <img src="img/teacher-4.png" alt="" class="avatar-image">
+              <source media="(min-width: 1110px)" srcset="./img/teacher-4.png">
+              <source media="(min-width: 690px)" srcset="./img/teacher-4-690.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-4-510.png">
+              <source media="(min-width: 510px)" srcset="./img/teacher-4-320.png">
+              <img src="./img/teacher-4.png" alt="" class="avatar-image">
             </picture>
             <div class="teachers__descr">
               <h4 class="teachers-name">
@@ -294,11 +294,11 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="img/course-1.png">
-                  <source media="(min-width: 690px)" srcset="img/course-1-690.png">
-                  <source media="(min-width: 510px)" srcset="img/course-1-510.png">
-                  <source media="(min-width: 510px)" srcset="img/course-1-320.png">
-                  <img src="img/course-1.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/course-1.png">
+                  <source media="(min-width: 690px)" srcset="./img/course-1-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-1-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-1-320.png">
+                  <img src="./img/course-1.png" alt="" class="course-image">
                 </picture>
                 <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -336,11 +336,11 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="img/course-2.png">
-                  <source media="(min-width: 690px)" srcset="img/course-2-690.png">
-                  <source media="(min-width: 510px)" srcset="img/course-2-510.png">
-                  <source media="(min-width: 510px)" srcset="img/course-2-320.png">
-                  <img src="img/course-2.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/course-2.png">
+                  <source media="(min-width: 690px)" srcset="./img/course-2-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-2-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-2-320.png">
+                  <img src="./img/course-2.png" alt="" class="course-image">
                 </picture>
                 <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -377,11 +377,11 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="img/course-3.png">
-                  <source media="(min-width: 690px)" srcset="img/course-3-690.png">
-                  <source media="(min-width: 510px)" srcset="img/course-3-510.png">
-                  <source media="(min-width: 510px)" srcset="img/course-3-320.png">
-                  <img src="img/course-3.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/course-3.png">
+                  <source media="(min-width: 690px)" srcset="./img/course-3-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-3-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-3-320.png">
+                  <img src="./img/course-3.png" alt="" class="course-image">
                 </picture>
                 <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -418,11 +418,11 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="img/course-4.png">
-                  <source media="(min-width: 690px)" srcset="img/course-4-690.png">
-                  <source media="(min-width: 510px)" srcset="img/course-4-510.png">
-                  <source media="(min-width: 510px)" srcset="img/course-4-320.png">
-                  <img src="img/course-4.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/course-4.png">
+                  <source media="(min-width: 690px)" srcset="./img/course-4-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-4-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/course-4-320.png">
+                  <img src="./img/course-4.png" alt="" class="course-image">
                 </picture>
                 <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
