--- a/index.html
+++ b/index.html
@@ -284,23 +284,23 @@
         </ul>
       </div>
     </section>
-    <section class="section__courses section-offset">
-      <div class="container courses">
-        <h3 class="courses__title section-title">
+    <section class="section__Courses section-offset">
+      <div class="container Courses">
+        <h3 class="Courses__title section-title">
           Курсы
         </h3>
-        <ul class="courses__list row list-reset">
+        <ul class="Courses__list row list-reset">
           <li class="list__item col-lg-6 col-md-6 col-xl-6 col-sm-6 col-12">
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="./img/course-1.png">
-                  <source media="(min-width: 690px)" srcset="./img/course-1-690.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-1-510.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-1-320.png">
-                  <img src="./img/course-1.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/Course-1.png">
+                  <source media="(min-width: 690px)" srcset="./img/Course-1-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-1-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-1-320.png">
+                  <img src="./img/Course-1.png" alt="" class="Course-image">
                 </picture>
-                <div class="course__time">
+                <div class="Course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -314,7 +314,7 @@
                       </clippath>
                     </defs>
                   </svg>
-                  <span class="course-duration">60 часов</span>
+                  <span class="Course-duration">60 часов</span>
                 </div>
               </div>
               <div class="preview__text">
@@ -336,13 +336,13 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="./img/course-2.png">
-                  <source media="(min-width: 690px)" srcset="./img/course-2-690.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-2-510.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-2-320.png">
-                  <img src="./img/course-2.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/Course-2.png">
+                  <source media="(min-width: 690px)" srcset="./img/Course-2-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-2-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-2-320.png">
+                  <img src="./img/Course-2.png" alt="" class="Course-image">
                 </picture>
-                <div class="course__time">
+                <div class="Course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -356,7 +356,7 @@
                       </clippath>
                     </defs>
                   </svg>
-                  <span class="course-duration">40 часов</span>
+                  <span class="Course-duration">40 часов</span>
                 </div>
               </div>
               <div class="preview__text">
@@ -377,13 +377,13 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="./img/course-3.png">
-                  <source media="(min-width: 690px)" srcset="./img/course-3-690.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-3-510.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-3-320.png">
-                  <img src="./img/course-3.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/Course-3.png">
+                  <source media="(min-width: 690px)" srcset="./img/Course-3-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-3-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-3-320.png">
+                  <img src="./img/Course-3.png" alt="" class="Course-image">
                 </picture>
-                <div class="course__time">
+                <div class="Course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -397,7 +397,7 @@
                       </clippath>
                     </defs>
                   </svg>
-                  <span class="course-duration">40 часов</span>
+                  <span class="Course-duration">40 часов</span>
                 </div>
               </div>
               <div class="preview__text">
@@ -418,13 +418,13 @@
             <article class="item__preview">
               <div class="preview__image">
                 <picture class="preview-picture">
-                  <source media="(min-width: 1110px)" srcset="./img/course-4.png">
-                  <source media="(min-width: 690px)" srcset="./img/course-4-690.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-4-510.png">
-                  <source media="(min-width: 510px)" srcset="./img/course-4-320.png">
-                  <img src="./img/course-4.png" alt="" class="course-image">
+                  <source media="(min-width: 1110px)" srcset="./img/Course-4.png">
+                  <source media="(min-width: 690px)" srcset="./img/Course-4-690.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-4-510.png">
+                  <source media="(min-width: 510px)" srcset="./img/Course-4-320.png">
+                  <img src="./img/Course-4.png" alt="" class="Course-image">
                 </picture>
-                <div class="course__time">
+                <div class="Course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -438,7 +438,7 @@
                       </clippath>
                     </defs>
                   </svg>
-                  <span class="course-duration">80 часов</span>
+                  <span class="Course-duration">80 часов</span>
                 </div>
               </div>
               <div class="preview__text">
