--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
                   <source media="(min-width: 690px)" srcset="./img/Course-1-690.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-1-510.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-1-320.png">
-                  <img src="./img/Course-1.png" alt="" class="Course-image">
+                  <img src="./img/Course-1.png" alt="" class="course-image">
                 </picture>
-                <div class="Course__time">
+                <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -340,9 +340,9 @@
                   <source media="(min-width: 690px)" srcset="./img/Course-2-690.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-2-510.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-2-320.png">
-                  <img src="./img/Course-2.png" alt="" class="Course-image">
+                  <img src="./img/Course-2.png" alt="" class="course-image">
                 </picture>
-                <div class="Course__time">
+                <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -381,9 +381,9 @@
                   <source media="(min-width: 690px)" srcset="./img/Course-3-690.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-3-510.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-3-320.png">
-                  <img src="./img/Course-3.png" alt="" class="Course-image">
+                  <img src="./img/Course-3.png" alt="" class="course-image">
                 </picture>
-                <div class="Course__time">
+                <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
@@ -422,9 +422,9 @@
                   <source media="(min-width: 690px)" srcset="./img/Course-4-690.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-4-510.png">
                   <source media="(min-width: 510px)" srcset="./img/Course-4-320.png">
-                  <img src="./img/Course-4.png" alt="" class="Course-image">
+                  <img src="./img/Course-4.png" alt="" class="course-image">
                 </picture>
-                <div class="Course__time">
+                <div class="course__time">
                   <svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_51_89)">
                       <path
